# Beginning-Cpp-Game-Programming-Third-Edition

./: CMakeLists.txt  CMakePresets.json  README.md
Timber/Chapter00/: CMakeLists.txt  main.cpp
Timber/Chapter01/: CMakeLists.txt  Timber.cpp
